Bug 439729 - In-stack preview with "Copy" blending mode breaks background rendering
Summary: In-stack preview with "Copy" blending mode breaks background rendering
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-10 17:08 UTC by Alvin Wong
Modified: 2021-07-15 13:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video showing bug (1.09 MB, video/webm)
2021-07-12 17:49 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-07-10 17:08:51 UTC
The lower layers' preview get erased when you transform or move a smaller layer with alpha with the "Color" blending mode, although I'm not even sure how the "Color" blending mode is supposed to work, especially when you set it on a layer that is not full size...

(commit 13f04ca)
Comment 1 Dmitry Kazakov 2021-07-12 14:32:01 UTC
Hi, Alvin!

I cannot reproduce the problem. Could you please make a video or at least attach a test file?
Comment 2 Alvin Wong 2021-07-12 17:48:07 UTC
Oh no... I just realized my error, I meant to say "Copy" not "Color"!
Comment 3 Alvin Wong 2021-07-12 17:49:31 UTC
Created attachment 140012 [details]
Video showing bug

Anyway, here's a video of it happening
Comment 4 Dmitry Kazakov 2021-07-13 09:01:52 UTC
Okay, I see. It is not much related to the transform tool. It affects all the places that use layer->extent()/exactBounds() for calculating the needed update area of the layer.
Comment 5 Dmitry Kazakov 2021-07-15 13:35:01 UTC
Git commit 87d9c1bf2da0848557baf7b80aaceb1330f88ecd by Dmitry Kazakov.
Committed on 15/07/2021 at 07:57.
Pushed by dkazakov into branch 'master'.

Fix transform tool to transform layer in COPY mode

M  +2    -1    libs/image/kis_layer.cc
M  +3    -1    plugins/tools/tool_transform2/strokes/inplace_transform_stroke_strategy.cpp
M  +3    -1    plugins/tools/tool_transform2/strokes/transform_stroke_strategy.cpp

https://invent.kde.org/graphics/krita/commit/87d9c1bf2da0848557baf7b80aaceb1330f88ecd