Fix transform tool to transform layer in COPY mode

BUG:439729